# Trufas_django

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
media/images/: b9ad0c82-5268-495c-befa-15a7bba4576b  f3840f01-70ce-432f-a760-45e1b9877231
trufas/: admin.py  apps.py  models.py  serializers.py  views.py
trufas/migrations/: 0001_initial.py  0002_sabor.py  0002_trufa_capa.py  0003_sem_lactose_remove_sabor_site.py  0003_trufa_sabor.py  0004_alter_trufa_combo.py  0004_rename_descricao_combo_nome.py  0005_alter_trufa_sem_lactose.py  0005_rename_nome_combo_descricao.py  0006_alter_trufa_sabor.py  0006_trufa.py  0007_combo_capa.py  0007_remove_trufa_isbn.py  0008_rename_titulo_trufa_nome.py  0008_sabor_capa.py  0009_remove_sem_lactose_nome_sem_lactose_capa_and_more.py  0009_rename_nome_trufa_titulo.py
trufas/models/: __init__.py  combo.py  sabor.py  sem_lactose.py  trufa.py
trufas/serializers/: __init__.py  combo.py  sabor.py  sem_lactose.py  trufa.py
trufas/views/: __init__.py  combo.py  sabor.py  sem_lactose.py  trufa.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
